# SWLF

./: buildapp.py  pyproject.toml
swlf/app/: __init__.py  app.py
swlf/app/models/: crewmgmt.py  swlf.py
swlf/app/playbook/: playbook_blocks.py  playbook_meeting.py  voting_data.csv
swlf/app/playbook/.ipynb_checkpoints/: playbook_functions-checkpoint.py  playbook_relationships-checkpoint.py
swlf/app/presentations/: jargon.py  muddy_river.md  muddy_river.py
swlf/app/routes/: crew_member_routes.py  meeting_routes.py  task_routes.py
swlf/app/static/css/: style.css
swlf/app/templates/: data.html  index.html
swlf/app/utils/: build_new.py  import_csv.py
